# octo-sts-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  wrangler.toml
.github/workflows/: publish-gcp-image.yml  test-octo-sts-production.yml  test-octo-sts-rust.yml
cloudflare/: Cargo.toml
cloudflare/src/: lib.rs  platform.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  platform.rs  test_support.rs
core/src/github/: api.rs  auth.rs  mod.rs  webhook.rs
core/src/oidc/: discovery.rs  jwks.rs  validate.rs
core/src/policy/: check.rs  compile.rs  mod.rs
core/src/sts/: exchange.rs  exchange_pat.rs  mod.rs  revoke.rs
docs/architecture/: README.md
docs/plans/: 2026-02-03-octo-sts-rust-design.md  2026-02-04-multi-platform-design.md  security-gaps-2026-02-03.md
gcp/: Cargo.toml  Dockerfile  deploy.sh
gcp/src/: kms.rs  main.rs  platform.rs
src/: config.rs  error.rs  lib.rs
src/github/: api.rs  auth.rs  webhook.rs
src/kv/: cache.rs  mod.rs
src/oidc/: discovery.rs  jwks.rs  mod.rs  validate.rs
src/policy/: check.rs  compile.rs  mod.rs  types.rs
src/sts/: exchange.rs  exchange_pat.rs  mod.rs  revoke.rs
terraform/: .gitignore  outputs.tf  rate_limiting.tf  terraform.tfvars.example  variables.tf  versions.tf
