[package]
name = "octo-sts-rust"
version = "0.1.0"
edition = "2021"
authors = ["Epiphytic"]
description = "GitHub Security Token Service for Cloudflare Workers"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers
worker = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# JWT handling - using WASM-compatible fork
surrealdb-jsonwebtoken = "8.3.0-surreal.1"

# Utilities
regex = "1"
thiserror = "1"
base64 = "0.22"
url = "2"
hex = "0.4"
chrono = "0.4"

# Crypto (for webhook signature verification)
hmac = "0.12"
sha2 = "0.10"

# Async
futures = "0.3"

# WASM support
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
