[package]
name = "octo-sts-core"
version = "0.1.0"
edition = "2021"
authors = ["Epiphytic"]
description = "Platform-agnostic core logic for octo-sts"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# JWT handling - using WASM-compatible fork
surrealdb-jsonwebtoken = "8.3.0-surreal.1"

# Utilities
regex = "1"
thiserror = "1"
base64 = "0.22"
url = "2"
hex = "0.4"
chrono = "0.4"

# Crypto (for webhook signature verification)
hmac = "0.12"
sha2 = "0.10"

# Async
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
